# egyid

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
egyid/: __init__.py  generator.py  governorates.py  id.py  utils.py  validation.py
tests/: test_egyptian_national_id.py
