[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egyid"
version = "1.0.0"
description = "A Python library for parsing, validating, and generating Egyptian National IDs"
authors = [
  { name = "Petter0x1" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

keywords = ["egypt", "national-id", "validation", "parsing", "generation"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Petter0x1/egyid"
Repository = "https://github.com/Petter0x1/egyid"
Issues = "https://github.com/Petter0x1/egyid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["egyid*"]